# rocThrust

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci-gputest.yml  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  NOTICES.txt  README.md  custom.properties  install  rmake.py  rtest.py  rtest.xml  toolchain-linux.cmake
examples/: CMakeLists.txt  arbitrary_transformation.cu  bounding_box.cu  bucket_sort2d.cu  device_ptr.cu  discrete_voronoi.cu  dot_products_with_zip.cu  lambda.cu  max_abs_diff.cu  minmax.cu  monte_carlo.cu  monte_carlo_disjoint_sequences.cu  norm.cu  padded_grid_reduction.cu  raw_reference_cast.cu  remove_points2d.cu  repeated_range.cu  saxpy.cu  scan_by_key.cu  scan_matrix_by_rows.cu  simple_moving_average.cu  sort.cu  sorting_aos_vs_soa.cu  stream_compaction.cu  strided_range.cu  sum_rows.cu  summary_statistics.cu  summed_area_table.cu  tiled_range.cu  transform_input_output_iterator.cu  transform_iterator.cu  transform_output_iterator.cu  uninitialized_vector.cu  word_count.cu
examples/cpp_integration/: CMakeLists.txt
examples/cuda/: range_view.cu
examples/include/: host_device.h
extra/: CMakeLists.txt  test_rocthrust_package.cpp
internal/benchmark/: CMakeLists.txt  bench.cu  timer.h
test/: CMakeLists.txt  MWC64X.hpp  test_adjacent_difference.cpp  test_advance.cpp  test_allocator.cpp  test_allocator_aware_policies.cpp  test_assertations.hpp  test_assertions.hpp  test_async_copy.cpp  test_async_for_each.cpp  test_async_reduce.cpp  test_async_scan.cpp  test_async_sort.cpp  test_async_transform.cpp  test_binary_search.cpp  test_binary_search_descending.cpp  test_binary_search_vector.cpp  test_binary_search_vector_descending.cpp  test_complex.cpp  test_complex_transform.cpp  test_constant_iterator.cpp  test_copy.cpp  test_copy_n.cpp  test_count.cpp  test_counting_iterator.cpp  test_dereference.cpp  test_device_delete.cpp  test_device_ptr.cpp  test_device_reference.cpp  test_discard_iterator.cpp  test_distance.cpp  test_equal.cpp  test_fill.cpp  test_find.cpp  test_for_each.cpp  test_gather.cpp  test_generate.cpp  test_header.hpp  test_inner_product.cpp  test_is_partitioned.cpp  (+93 more)
test/bitwise_repro/: bwr_db.hpp  bwr_utils.hpp
test/hipstdpar/: CMakeLists.txt  test_algorithms.cpp  test_interpose.cpp
testing/: CMakeLists.txt  adjacent_difference.cu  allocator.cu  allocator_aware_policies.cu  async_copy.cu  async_for_each.cu  async_reduce.cu  async_reduce_into.cu  async_sort.cu  async_transform.cu  binary_search.cu  binary_search_vector.cu  binary_search_vector_descending.cu  complex.cu  complex_transform.cu  constant_iterator.cu  copy.cu  copy_n.cu  count.cu  counting_iterator.cu  dependencies_aware_policies.cu  dereference.cu  device_delete.cu  discard_iterator.cu  equal.cu  event.cu  fill.cu  for_each.cu  functional_placeholders_arithmetic.cu  functional_placeholders_bitwise.cu  functional_placeholders_compound_assignment.cu  functional_placeholders_miscellaneous.cu  future.cu  gather.cu  generate.cu  inner_product.cu  is_contiguous_iterator.cu  is_operator_function_object.cu  is_partitioned.cu  is_sorted.cu  (+53 more)
testing/async/: CMakeLists.txt  test_policy_overloads.h
testing/cpp/: adjacent_difference.cu
testing/cuda/: adjacent_difference.cu  copy_if.cu  count.cu  device_side_universal_vector.cu  find.cu  for_each.cu  gather.cu  generate.cu  is_partitioned.cu  merge_sort.cu  pair_sort.cu  pair_sort_by_key.cu  partition.cu  partition_point.cu  reduce_by_key.cu  remove.cu  replace.cu  scan.cu  scatter.cu  sort.cu  sort_by_key.cu  transform_scan.cu  unique.cu  unique_by_key.cu
testing/docs/: doxybook_test.h
testing/regression/: gh_919_nvbug_2318871__zip_iterator_with_complex.cu
testing/unittest/: CMakeLists.txt  assertions.h  ctest.h  exceptions.h  meta.h  random.h  runtime_static_assert.h  special_types.h  system.h  testframework.cu  testframework.h  unittest.h  util.h  util_async.h
thrust/: CMakeLists.txt  addressof.h  adjacent_difference.h  advance.h  allocate_unique.h  binary_search.h  complex.h  copy.h  count.h  device_allocator.h  device_delete.h  device_free.h  device_make_unique.h  device_malloc.h  device_malloc_allocator.h  device_new.h  device_new_allocator.h  device_ptr.h  device_reference.h  device_vector.h  distance.h  equal.h  execution_policy.h  extrema.h  fill.h  find.h  for_each.h  functional.h  future.h  gather.h  generate.h  host_vector.h  inner_product.h  limits.h  logical.h  memory.h  merge.h  mismatch.h  optional.h  pair.h  (+28 more)
thrust/async/: copy.h  for_each.h  reduce.h  scan.h  sort.h  transform.h
thrust/cmake/: README.md  thrust-config-version.cmake  thrust-config.cmake
thrust/detail/: adjacent_difference.inl  alignment.h  binary_search.inl  config.h  contiguous_storage.h  contiguous_storage.inl  copy.h  copy.inl  copy_if.h  copy_if.inl  count.inl  cpp14_required.h  cstdint.h  dependencies_aware_execution_policy.h  device_delete.inl  distance.inl  equal.inl  event_error.h  execute_with_allocator.h  execute_with_allocator_fwd.h  execute_with_dependencies.h  execution_policy.h  extrema.inl  fill.inl  find.inl  for_each.inl  function.h  gather.inl  generate.inl  get_iterator_value.h  inner_product.inl  integer_math.h  integer_traits.h  internal_functional.h  logical.inl  malloc_and_free.h  memory_algorithms.h  merge.inl  minmax.h  mismatch.inl  (+45 more)
thrust/iterator/: constant_iterator.h  counting_iterator.h  discard_iterator.h  iterator_adaptor.h  iterator_categories.h  iterator_facade.h  iterator_traits.h  permutation_iterator.h  retag.h  reverse_iterator.h  transform_input_output_iterator.h  transform_iterator.h  transform_output_iterator.h  zip_iterator.h
thrust/mr/: allocator.h  disjoint_pool.h  disjoint_sync_pool.h  disjoint_tls_pool.h  fancy_pointer_resource.h  memory_resource.h  new.h  polymorphic_adaptor.h  pool.h  sync_pool.h  tls_pool.h  validator.h
thrust/random/: discard_block_engine.h  linear_congruential_engine.h  linear_feedback_shift_engine.h  normal_distribution.h  subtract_with_carry_engine.h  uniform_int_distribution.h  (+2 more)
(+659 files in other folders)
